# rbx-cli

./: Cargo.toml
src/: lib.rs
src/cli/: main.rs
src/luau/: mod.rs  sourcemap.rs
src/luau/globals/: mod.rs  require.rs  task.rs
src/luau/userdata/: game.rs  instance.rs  mod.rs
test-projects/: generate_sourcemaps.sh
test-projects/require-modules/: default.project.json
test-projects/require-modules/src/: init.lua
