[package]
name = "rbx-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rbx-cli"
path = "src/cli/main.rs"

[lib]
name = "lib_rbxcli"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.29", features = ["derive"] }
derive_more = "0.99.17"
mlua = { version = "0.8.6", features = ["luau", "async"] }
serde = { version = "1.0.151", features = ["derive", "rc"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
